Fixed Spacing

--- a/style.css
+++ b/style.css
@@ -136,7 +136,6 @@ body{
 
 .member {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 
     background: rgba(255, 255, 255, 0.1);
